[package]
name = "example_brevi_auth_service"
version = "0.1.0"
edition = "2021"
description = "Example Auth Service"
authors = ["Elvis Brevi <elvisbrevi@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"